2015-08-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (write_file): Avoid calling copy_file() with a null
	pointer.  Found with cppcheck.

2015-08-09  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c, src/help.c (help_init), src/nano.c (do_toggle, main),
	src/winio.c (display_string, statusbar): Allow toggling the display
	of whitespace also when support for nanorc files was not built in,
	because the default values are quite usable.
	* src/files.c (read_file), src/rcfile.c, src/nano.c (main, usage):
	Fix compilation with --enable-tiny; file formats are not available
	then, so option --unix has no place; also add its description.
	* src/nano.c (finish): Remove an unneeded and mistaken condition.
	* src/nano.c (say_there_is_no_help): Make it sound more definitive.

2015-08-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (display_string): For some reason the reallocation done
	by null_at() messes things up.  So put in the null byte "manually".
	This is a fix -- or workaround -- for Savannah bug #45718.

2015-08-06  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main): For --enable-debug builds, let malloc() help
	to find initialization failures and uses-after-free.  Suggested by
	Mike Frysinger.
	* doc/texinfo/nano.texi: Improve the formatting, using @t to mark
	double-quoted literal strings, @: to mark periods that do not end
	sentences, and @. to mark a finishing period after a capital.

2015-08-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main), src/files.c (read_file), src/rcfile.c,
	doc/man/nano.1, doc/man/nanorc.5, doc/texinfo/nano.texi: Add
	the option --unix, to save a file by default in Unix format.
	* doc/nanorc.sample.in: Advertise the five new bindable functions.
	* doc/man/nano.1, doc/man/nanorc.5, doc/texinfo/nano.texi: Tweaks.

2015-08-03  Benno Schulenberg  <bensberg@justemail.net>
	* src/rcfile.c (parse_binding): Check the value of shortcut->toggle